wrap a nav bar across pages to avoid moving of logo

--- a/teampulse-frontend/src/pages/DashboardPage.css
+++ b/teampulse-frontend/src/pages/DashboardPage.css
@@ -2,20 +2,12 @@
     display: none;
 }
 
-.teampulse-logo {
-    width: clamp(265px, 20vw, 320px);
-    overflow: visible;
-    display: block;
-}
 
 .dashboard-chooseteam {
     gap: 0.8rem;
 }
 
 @media only screen and (min-width: 800px) {
-    .dashboard-header {
-        width: 100%;
-    }
 
 
     .dashboard-switchview {
